Hayden added her h2 and img

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <h2>Jonathan Clutter</h2>
   <p>I'm the very middle child of five. You know I like ice cream.</p>
   <img src="img/ice-cream.png" alt="Ice cream" />
+  <h2> Hayden Frisco </h2>
+  <p> An avid collector off all things fall. Candles, cinnamon, pumpkins, oh my! </p>
+  <img src="img/fall.jpg" alt="leaves"
 </body>
 </html>
