Grant added his name

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <img src="img/ice-cream.png" alt="Ice cream" />
   <h2> Hayden Frisco </h2>
   <p> An avid collector off all things fall. Candles, cinnamon, pumpkins, oh my! </p>
+  <h2>Grant Rossi</h2>
   <img src="img/fall.jpg" alt="leaves"
 </body>
 </html>
