--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <p> An avid collector off all things fall. Candles, cinnamon, pumpkins, oh my! </p>
   <h2>Grant Rossi</h2>
   <img src="img/fall.jpg" alt="leaves"
+       <h2>madeline subetto</h2>
 </body>
 </html>
