--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <h2>Grant Rossi</h2>
   <img src="img/fall.jpg" alt="leaves"
        <h2>madeline subetto</h2>
+  <h2>Connor White</h2>
 </body>
 </html>
